# pcm-recon

./: .gitignore  README.md  gen-icons.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: debug_parse.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  parser.rs
src/lib/: config.ts  format.ts  stores.ts  types.ts
src/lib/components/: BarChart.svelte  DetailPanel.svelte  RiderTable.svelte  StatBar.svelte  SummaryCard.svelte
src/lib/sections/: AllRiders.svelte  Analytics.svelte  Dashboard.svelte  FreeMarket.svelte  Rankings.svelte  ScoutReports.svelte  Scouting.svelte  Shortlist.svelte  Teams.svelte
