[package]
name = "pcm-recon"
version = "2.0.0"
edition = "2021"

[lib]
name = "pcm_recon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
flate2           = "1"

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "z"
strip   = true
